freegeek-build-utils (1.2.41) UNRELEASED; urgency=low

  * Switch printme to use ruby1.8 for SOAP4R (Closes: #27164)

 -- Ryan Niebur <ryan@debian.org>  Sat, 27 Oct 2012 11:20:38 -0700

freegeek-build-utils (1.2.40) freegeek-test; urgency=low

  * Udev reports 'node not found' errors from when checking LVM volumes
    for CD drives, so fix freegeek_show_cd_drives to not call myudevinfo
    on the dm-* devices from /sys/block/

 -- Ryan Niebur <ryan@debian.org>  Sat, 27 Oct 2012 10:48:34 -0700

freegeek-build-utils (1.2.39) freegeek-test; urgency=low

  * Fix accidental checkin of debug code

 -- Ryan Niebur <ryan@debian.org>  Wed, 24 Oct 2012 11:08:47 -0700

freegeek-build-utils (1.2.38) freegeek-test; urgency=low

  * Add a script named extend-filesystem which will add a new hard drive
    to the root filesystem on LVM (Closes: #23339)

 -- Ryan Niebur <ryan@debian.org>  Wed, 24 Oct 2012 00:10:14 -0700

freegeek-build-utils (1.2.37) freegeek-test; urgency=low

  * implement OR'ed conditions for system specific questions (Closes:
    #26673)

 -- Ryan Niebur <ryan@debian.org>  Sat, 31 Mar 2012 00:01:09 -0700

freegeek-build-utils (1.2.36) freegeek-test; urgency=low

  * Implement ordering logic when pulling from basicchecks.yml, to work
    around unreliability of Ruby between versions, and switch the order
    of Sound and CPU tests, as well as video and resolution tests,
    as they requested (Closes: #27469)

 -- Ryan Niebur <ryan@debian.org>  Fri, 23 Mar 2012 12:51:54 -0700

freegeek-build-utils (1.2.35) freegeek-test; urgency=low

  * add support for defaulting values from past printme's

 -- Ryan Niebur <ryan@debian.org>  Sat, 03 Mar 2012 00:40:24 -0800

freegeek-build-utils (1.2.34) freegeek-test; urgency=low

  * add ALLOW_ROOT=true to force allowing root user
  * add support for conditional questions, based on printme input
    for specific areas (Closes #26673, but waiting for more questions)